# swagger.json
@@ -427,7 +427,7 @@
     "/user/avatars": {
       "patch": {
         "tags": ["User"],
-        "summary": "Upload user avatar",
+        "summary": "Update user avatar",
 
         "security": [{ "Bearer": [] }],
 
@@ -531,26 +531,20 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "user": {
-                      "type": "object",
-                      "description": "User object",
-                      "properties": {
-                        "_id": {
-                          "$ref": "#/components/_id"
-                        },
-                        "name": {
-                          "$ref": "#/components/name"
-                        },
-                        "email": {
-                          "$ref": "#/components/email"
-                        },
-                        "avatarURL": {
-                          "$ref": "#/components/avatarURL"
-                        },
-                        "gender": {
-                          "$ref": "#/components/gender"
-                        }
-                      }
+                    "name": {
+                      "$ref": "#/components/name"
+                    },
+                    "email": {
+                      "$ref": "#/components/email"
+                    },
+                    "avatarURL": {
+                      "$ref": "#/components/avatarURL"
+                    },
+                    "gender": {
+                      "$ref": "#/components/gender"
+                    },
+                    "dailyWaterGoal": {
+                      "$ref": "#/components/dailyWaterGoal"
                     }
                   }
                 }
@@ -795,7 +789,7 @@
 
       "delete": {
         "tags": ["Water"],
-        "summary": "Delete user water record",
+        "summary": "Delete water record",
 
         "security": [{ "Bearer": [] }],
 
@@ -840,7 +834,7 @@
     "/today": {
       "get": {
         "tags": ["WaterToday"],
-        "summary": "Get current date water records",
+        "summary": "Get daily water records",
 
         "parameters": [
           {
@@ -1064,9 +1058,9 @@
     "gender": {
       "type": "string",
       "description": "User gender",
-      "default": "female",
-      "enum": ["female", "male"],
-      "example": "female"
+      "default": "woman",
+      "enum": ["man", "woman"],
+      "example": "woman"
     },
     "email": {
       "type": "string",
